src/main/java/com/example/configs/handler/errors/ForbiddenException.java
package com.example.configs.handler.errors;

public class ForbiddenException extends RuntimeException {
    private static final String DESCRIPTION = "Forbidden Exception";

    public ForbiddenException(String detail) {
        super(DESCRIPTION + ". " + detail);
    }

}
